--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   },
   "dependencies": {
     "@copilotkit/backend": "^0.3.0",
-    "@copilotkit/react-core": "latest",
-    "@copilotkit/react-ui": "^0.2.0",
+    "@copilotkit/react-core": "^1.9.1",
+    "@copilotkit/react-ui": "1.9.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "latest",
+    "@prisma/client": "^6.11.1",
     "bcryptjs": "latest",
     "next": "latest",
     "next-auth": "latest",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "ws": "^8.18.3"
   },
   "prisma": {
@@ -36,12 +36,12 @@
     "@types/react-dom": "latest",
     "@types/supertest": "^6.0.3",
     "@types/ws": "^8.18.1",
-    "autoprefixer": "latest",
+    "autoprefixer": "^10.4.21",
     "jest": "latest",
     "postcss": "^8.5.6",
     "prisma": "latest",
     "supertest": "^7.1.1",
-    "tailwindcss": "latest",
+    "tailwindcss": "^4.1.11",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
